[project]
name = "viva-engage-rescue"
version = "0.1.0"
description = "Skrapar och arkiverar Viva Engage-communities till sökbart SQLite-arkiv"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false
